<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.cslaker.study.activity.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

        <RelativeLayout
            android:id="@+id/rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_scrollFlags="scroll">

            <TextView
                android:id="@+id/tv_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_book_black_18dp"
                android:drawablePadding="8dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/subjects_name"
                android:textColor="@color/textColorSecondary"/>

            <TextView
                android:id="@+id/tv_question_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_subject"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:textColor="@color/textColorPrimary"
                android:textSize="16sp"
                android:text="如何证明：可导一定连续，连续不一定可导？"/>

            <TextView
                android:id="@+id/tv_question_contents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_below="@+id/tv_question_title"
                android:textSize="14sp"
                android:textColor="@color/textColorSecondary"
                android:text="如题，分两点给出证明，谢谢了！高数期末考重点题！能不能答对就靠各位的了！"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_below="@+id/tv_question_contents"
                android:showDividers="middle|end|beginning"
                android:divider="@drawable/divider_line"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_user"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:gravity="center"
                    android:drawableLeft="@drawable/ic_user_black_24dp"
                    android:textSize="16sp"
                    android:textColor="@color/textColorSecondary"
                    android:text="@string/user1_name"/>

                <TextView
                    android:id="@+id/tv_new_answer"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:gravity="center"
                    android:drawableLeft="@drawable/ic_edit_black_24dp"
                    android:textSize="16sp"
                    android:textColor="@color/textColorSecondary"
                    android:text="@string/replay" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/answer_number" />

        <TextView
            android:id="@+id/tv_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_alignParentRight="true"
            android:drawableRight="@drawable/ic_sort_16dp"
            android:drawablePadding="8dp"
            android:text="@string/default_sort" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycle_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv_sort" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>